# docs/swagger.yaml
@@ -10,6 +10,22 @@ definitions:
         example: true
         type: boolean
     type: object
+  backendutils.Details:
+    properties:
+      service:
+        example: 0
+        maximum: 1
+        minimum: 0
+        type: integer
+      tx_type:
+        example: 10
+        maximum: 11
+        minimum: 0
+        type: integer
+    required:
+    - service
+    - tx_type
+    type: object
   dto.CreateDIDDTO:
     properties:
       did:
@@ -31,8 +47,8 @@ definitions:
   dto.DeleteDataDTO:
     properties:
       did_index:
-        example: 1
-        type: integer
+        example: "1"
+        type: string
       key:
         example: email
         type: string
@@ -103,8 +119,8 @@ definitions:
         example: 0x742d35Cc6634C0532925a3b844Bc9e7595f0bEb
         type: string
       did_index:
-        example: 1
-        type: integer
+        example: "1"
+        type: string
       key_identifier:
         example: key1
         type: string
@@ -131,8 +147,8 @@ definitions:
         example: 0x742d35Cc6634C0532925a3b844Bc9e7595f0bEb
         type: string
       did_index:
-        example: 1
-        type: integer
+        example: "1"
+        type: string
       key_identifier:
         example: key1
         type: string
@@ -212,6 +228,8 @@ definitions:
       data:
         example: 0x...
         type: string
+      details:
+        $ref: '#/definitions/backendutils.Details'
       nonce:
         example: "0"
         type: string
@@ -226,6 +244,7 @@ definitions:
         type: string
     required:
     - data
+    - details
     - nonce
     - priv_key
     - target
@@ -237,8 +256,8 @@ definitions:
         example: 0x1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef
         type: string
       did_index:
-        example: 1
-        type: integer
+        example: "1"
+        type: string
     required:
     - claim_id
     - did_index
@@ -246,8 +265,8 @@ definitions:
   dto.RemoveKeyDTO:
     properties:
       did_index:
-        example: 1
-        type: integer
+        example: "1"
+        type: string
       key_data:
         example: 0x1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef
         type: string
@@ -264,8 +283,8 @@ definitions:
         example: "0x1234567890"
         type: string
       did_index:
-        example: 1
-        type: integer
+        example: "1"
+        type: string
       issuer:
         example: 0x742d35Cc6634C0532925a3b844Bc9e7595f0bEb
         type: string
@@ -290,8 +309,8 @@ definitions:
   dto.StoreDataDTO:
     properties:
       did_index:
-        example: 1
-        type: integer
+        example: "1"
+        type: string
       key:
         example: email
         type: string
@@ -306,8 +325,8 @@ definitions:
   dto.StoreKeyDTO:
     properties:
       did_index:
-        example: 1
-        type: integer
+        example: "1"
+        type: string
       key_data_hashed:
         example: 0x1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef
         type: string
@@ -334,8 +353,8 @@ definitions:
   dto.TransferDIDOwnershipDTO:
     properties:
       did_index:
-        example: 1
-        type: integer
+        example: "1"
+        type: string
       new_owner:
         example: 0x8ba1f109551bD432803012645Ac136ddd64DBA72
         type: string
@@ -350,8 +369,8 @@ definitions:
   dto.UpdateDIDDTO:
     properties:
       did_index:
-        example: 1
-        type: integer
+        example: "1"
+        type: string
       uri:
         example: https://example.com/did/metadata
         type: string
@@ -406,6 +425,8 @@ definitions:
       data:
         example: 0x...
         type: string
+      details:
+        $ref: '#/definitions/backendutils.Details'
       nonce:
         example: 1
         type: integer
