# utils/structs.go
@@ -1,0 +1,6 @@
+package backendutils
+
+type Details struct {
+	Service uint8 `json:"service" example:"0"`
+	TxType  uint8 `json:"tx_type" example:"10"`
+}
